--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -437,7 +437,7 @@ SECRET_KEY = "{{ SECRET_KEY }}"
 PRIME_VIEWS_INTERVAL = 2
 
 {% if 'ALTERNATE_HOSTS' in localsettings %}
-ALTERNATE_HOSTS = {{ localsettings.ALTERNATE_HOSTS }}
+ALTERNATE_HOSTS = '{{ localsettings.ALTERNATE_HOSTS }}'
 {% else %}
 
 ####### PACT SPECIAL SETTINGS
