--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -438,7 +438,7 @@ PRIME_VIEWS_INTERVAL = 2
 
 {% if 'ALTERNATE_HOSTS' in localsettings %}
 ALTERNATE_HOSTS = '{{ localsettings.ALTERNATE_HOSTS }}'
-{% else %}
+{% end %}
 
 ####### PACT SPECIAL SETTINGS
 
