Add explicit RATE_LIMIT_SUBMISSIONS setting for saas rate limiting

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -562,6 +562,8 @@ COUCH_STALE_QUERY = 'update_after'
 API_THROTTLE_REQUESTS = 5
 API_THROTTLE_TIMEFRAME = 10
 
+RATE_LIMIT_SUBMISSIONS = {{ localsettings.RATE_LIMIT_SUBMISSIONS | default(False) }}
+
 {% if 'SAVED_EXPORT_ACCESS_CUTOFF' in localsettings %}
 SAVED_EXPORT_ACCESS_CUTOFF = {{ localsettings.SAVED_EXPORT_ACCESS_CUTOFF }}
 {% endif %}
