--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -568,6 +568,10 @@ RATE_LIMIT_SUBMISSIONS = {{ localsettings.RATE_LIMIT_SUBMISSIONS | default(False
 SAVED_EXPORT_ACCESS_CUTOFF = {{ localsettings.SAVED_EXPORT_ACCESS_CUTOFF }}
 {% endif %}
 
+{% if 'STALE_EXPORT_THRESHOLD' in localsettings %}
+STALE_EXPORT_THRESHOLD = {{ localsettings.STALE_EXPORT_THRESHOLD }}
+{% endif %}
+
 {% if MAPS_LAYERS %}
 MAPS_LAYERS = json.loads('{{ MAPS_LAYERS|to_json }}')
 {% endif %}
