set ES default query timeout to 5 mins

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -929,3 +929,7 @@ STATIC_DATA_SOURCE_PROVIDERS = [
 {% endfor %}
 ]
 {% endif %}
+
+{% if localsettings.ES_SEARCH_TIMEOUT is defined %}
+ES_SEARCH_TIMEOUT = {{ localsettings.ES_SEARCH_TIMEOUT }}
+{% endif %}
