--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -353,9 +353,9 @@ EULA_COMPLIANCE = {{ localsettings.EULA_COMPLIANCE|default(False) }}
 
 AXES_LOCK_OUT_AT_FAILURE = False
 
-BUG_REPORT_RECIPIENTS = ['commcarehq-support@dimagi.com']
-NEW_DOMAIN_RECIPIENTS = ['inquiries@dimagi.com']
-EXCHANGE_NOTIFICATION_RECIPIENTS = ["exchange@dimagi.com"]
+BUG_REPORT_RECIPIENTS = ['{{ bug_report_email }}']
+NEW_DOMAIN_RECIPIENTS = ['{{ new_domain_email }}']
+EXCHANGE_NOTIFICATION_RECIPIENTS = ["{{ exchange_email }}"]
 
 CUSTOM_REPORT_MAP = {
     "pathfinder": [
