--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -37,6 +37,8 @@ mobile_webworkers
 
 {{ __pgbouncer1__ }}
 
+{{ __pgbouncer2__ }}
+
 {{ __rds_pgmain0__ }}
 
 {{ __rds_pgucr0__ }}
@@ -66,6 +68,7 @@ rds_pgsynclog0
 [postgresql:children]
 pgproxy2
 pgbouncer1
+pgbouncer2
 remote_postgresql
 
 [ansible_skip:children]
